--- a/index.html
+++ b/index.html
@@ -7,7 +7,34 @@
 </head>
 <script>
     const number=parseInt(prompt("Enter tne number:"));
+    if (number == 1)
+    {
+    document.write("one");
+    }
     
+     else if (number == 2){
+     document.write("two");
+     }
+     else if(number == 3){
+        document.write("three");
+
+     }
+    else if (number == 4)
+    {
+       document.write("four");
+    }
+    else if (number == 5)
+    {
+        document.write("five");
+    }
+    else if (number == 6 )
+    {
+        document.write("six");
+    }
+    else{
+        document.write("invalide");
+    }
+
 </script>
 <body>
     
